k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-app
  labels:
    name: team-app
